fixed scroll on mainContent

--- a/public/html/search.html
+++ b/public/html/search.html
@@ -139,6 +139,66 @@
           </font>
         </div>
       </div>
+      <div class="userItem user-id">
+        <div class="user-icon">
+          <img src="../images/avatars/010-woman-6.png">
+        </div>
+        <div class="infoContainer">
+          <p class="username"><b>Name</b></p>
+          <p>Teacher</p>
+          <font class="rowWrapper">
+            <font>School</font> &middot; <font>username</font>
+          </font>
+        </div>
+      </div>
+      <div class="userItem user-id">
+        <div class="user-icon">
+          <img src="../images/avatars/010-woman-6.png">
+        </div>
+        <div class="infoContainer">
+          <p class="username"><b>Name</b></p>
+          <p>Teacher</p>
+          <font class="rowWrapper">
+            <font>School</font> &middot; <font>username</font>
+          </font>
+        </div>
+      </div>
+      <div class="userItem user-id">
+        <div class="user-icon">
+          <img src="../images/avatars/010-woman-6.png">
+        </div>
+        <div class="infoContainer">
+          <p class="username"><b>Name</b></p>
+          <p>Teacher</p>
+          <font class="rowWrapper">
+            <font>School</font> &middot; <font>username</font>
+          </font>
+        </div>
+      </div>
+      <div class="userItem user-id">
+        <div class="user-icon">
+          <img src="../images/avatars/010-woman-6.png">
+        </div>
+        <div class="infoContainer">
+          <p class="username"><b>Name</b></p>
+          <p>Teacher</p>
+          <font class="rowWrapper">
+            <font>School</font> &middot; <font>username</font>
+          </font>
+        </div>
+      </div>
+      <div class="userItem user-id">
+        <div class="user-icon">
+          <img src="../images/avatars/010-woman-6.png">
+        </div>
+        <div class="infoContainer">
+          <p class="username"><b>Name</b></p>
+          <p>Teacher</p>
+          <font class="rowWrapper">
+            <font>School</font> &middot; <font>username</font>
+          </font>
+        </div>
+      </div>
     </div>
   </div>
 
