pushing up final styles

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -17,14 +17,13 @@
         <div id="topBar">
             <div id="topBarGrid">
                 <div id="userIcon">
-                    <div id="userIconCircle"></div>
+                    <div id="userIconCircle">
+                      <i class="fas fa-user-graduate"></i>
+                    </div>
                     <i id="backArrow" class="fas fa-arrow-left"></i>
                 </div>
                 <div id="appName">
-                    <h1>App Name</h1>
-                </div>
-                <div id="filterButton">
-                    <i class="fas fa-exchange-alt"></i>
+                    <h1>Ha’āwi</h1>
                 </div>
                 <div id="postButton">
                     <i class="fas fa-plus"></i>
@@ -124,6 +123,9 @@
                         </div>
                     </div>
                 </div>
+                <div id="individualForumPost">
+
+                </div>
             </div>
         </div>
 
@@ -139,6 +141,14 @@
                     <i class="far fa-bell"></i>
                 </div>
             </div>
+            <div id="replyButtonContainer" >
+              <div class="addCommentContainer">
+                <h1>Add a comment...</h1>
+              </div>
+              <div class="postContainer">
+                <i class="fas fa-arrow-up"></i>
+              </div>
+            </div>
         </div>
     </div>
 
@@ -146,7 +156,9 @@
         <div class="topBar">
             <div class="topBarGrid">
                 <div class="userIcon">
-                    <div class="userIconCircle"></div>
+                    <div class="userIconCircle">
+                        <i class="fas fa-user-graduate"></i>
+                    </div>
                     <i class="backArrow" class="fas fa-arrow-left"></i>
                 </div>
                 <div class="postFeedTitle">
@@ -159,19 +171,17 @@
         </div>
         <div class="forumScroll">
         <div class="formContainer">
-            <form class="formGrid">
+            <form class="formGrid"  action="#" onsubmit="postRequest();return false">
                 <div class="formItemType formGridItem">
                     <label for="radioContainer">Type of Post</label>
                     <div id="radioGridContainer">
-                      <label id="formRequest" class="radioContainer">
-                        <h1>Requesting</h1>
-                        <input type="radio" name="radio" value="request">
-                        <!-- <span class="checkmark"></span> -->
+                      <label id="formRequest" class="radioContainer" onclick="selectRequest()">
+                        <h1 id="h1Request">Requesting</h1>
+                        <input id="radioRequest" type="radio" name="radio" value="requesting">
                       </label>
-                      <label id="formProvide" class="radioContainer">
-                        <h1>Providing</h1>
-                        <input type="radio" name="radio" value="request">
-                        <!-- <span class="checkmark"></span> -->
+                      <label id="formProvide" class="radioContainer" onclick="selectProvide()">
+                        <h1 id="h1Provide">Providing</h1>
+                        <input id="radioProvide" type="radio" name="radio" value="providing">
                     </label>
                     </div>
                 </div>
@@ -179,10 +189,10 @@
                 <div class="formItemTitle formGridItem">
                   <label for="formTitleInput">What you're requesting/providing</label>
                   <select id="formTitleInput">
-                    <option value="">op1</option>
-                    <option value="">op2</option>
-                    <option value="">op3</option>
-                    <option value="">op4</option>
+                    <option value="">Crayons</option>
+                    <option value="">Folder Paper</option>
+                    <option value="">Markers</option>
+                    <option value="">Rulers</option>
                   </select>
                 </div>
 
@@ -194,10 +204,12 @@
                 <div class="formItemImage">
                   <label for="formItemImageContainer">Upload an Image</label>
                   <div class="formItemImageContainer">
-                  <i class="fas fa-file-image"></i>
+                    <input id="uploadImgBtn" type="file" accept="image/*" onchange="loadFile(event)">
+                    <i class="fas fa-file-image"></i>
+                    <img id="displayImg" src = "">
+                  </div>
                 </div>
-                </div>
-                <input type="submit" value="Submit">
+                <input id="submitRequest" type="submit" value="Submit">
             </form>
         </div>
       </div>
@@ -206,7 +218,9 @@
       <div class="topBar">
           <div class="topBarGrid">
               <div class="userIcon">
-                  <div class="userIconCircle"></div>
+                  <div class="userIconCircle">
+                      <i class="fas fa-user-graduate"></i>
+                  </div>
                   <i class="backArrow" class="fas fa-arrow-left"></i>
               </div>
               <div class="postFeedTitle">
@@ -223,12 +237,25 @@
             <div class="formItemForum formGridItem">
               <label for="formForumInput">What forum you're posting in</label>
               <select id="formForumInput">
-                <option value="">op1</option>
-                <option value="">op2</option>
-                <option value="">op3</option>
-                <option value="">op4</option>
+                <option value="">General Discussion</option>
+                <option value="">Math</option>
+                <option value="">Science</option>
+                <option value="">English Language Arts</option>
+                <option value="">Social Studies</option>
+                <option value="">Foreign Languages</option>
+                <option value="">Off Topic</option>
               </select>
             </div>
+            <div class="formItemTitle formGridItem">
+              <label for="formTitleInput">Title</label>
+              <input id="formTitleInput" type="text" name="" value="">
+            </div>
+
+            <div class="formItemDescription formGridItem">
+              <label for="formDescriptionInput">Description</label>
+              <textarea id="formDescriptionInput"></textarea>
+            </div>
+            <input type="submit" value="Submit">
           </form>
       </div>
     </div>
