--- a/public/html/inbox.html
+++ b/public/html/inbox.html
@@ -104,13 +104,19 @@
     <div id="bottomBar">
       <div id="bottomBarGrid">
         <div id="homeButton">
-          <i class="fas fa-home"></i>
+          <a href="/">
+            <i class="fas fa-home"></i>
+          </a>
         </div>
         <div id="searchButton">
-          <i class="fas fa-search"></i>
+          <a href="/search">
+            <i class="fas fa-search"></i>
+          </a>
         </div>
         <div id="alertsButton">
-          <i class="far fa-bell"></i>
+          <a href="/inbox">
+            <i class="far fa-bell"></i>
+          </a>
         </div>
       </div>
     </div>
